--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code.
-extension-pkg-allow-list = "PyQt6"
+extension-pkg-allow-list = "qtpy"
 
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
